# genFFT

./: CMakeLists.txt  FindgenFFT.cmake  README.md  license.txt
genFFT/: CMakeLists.txt  fftCore.cpp  fftCore.h  genFFT.cpp  genFFT.h
sample/: CMakeLists.txt  clutils.cpp  clutils.h  cpu.cpp  cpu.h  main.cpp  main.h
